# RHI-type-of-project

./: .gitignore  .gitmodules  CMakeLists.txt
include/: fatal_error.h  renderer.h  window.h
include/glad/: glad.h
internal/: renderer_internal.h  window_internal.h
shaders/: blit.frag  blit.frag.spv  blit.vert  blit.vert.spv  triangle.frag.glsl  triangle.vert.glsl  triangle.vert.spv  triangle_textured.frag  triangle_textured.frag.spv  triangle_textured.vert  triangle_textured.vert.spv
src/: fatal_error.c  glad.c  main.c  renderer.c  renderer_d3d11.c  renderer_opengl.c  renderer_vulkan.c  window.c  window_glfw.c
